modified the fields of Remark.java

--- a/src/main/webapp/WEB-INF/views/bigtags/update.jspx
+++ b/src/main/webapp/WEB-INF/views/bigtags/update.jspx
@@ -8,6 +8,6 @@
             <field:input field="type" id="c_com_aeiou_bigbang_domain_BigTag_type" min="2" required="true" z="i5pbNZdQACWxPbWZSvKltv3CLmQ="/>
         </c:if>
         <field:select field="authority" id="c_com_aeiou_bigbang_domain_Content_authority" itemValue="id" items="${authorities}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
-        <field:select field="owner" id="c_com_aeiou_bigbang_domain_BigTag_owner" itemValue="id" items="${types}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
+        <field:select field="owner" id="c_com_aeiou_bigbang_domain_BigTag_owner" itemValue="id" items="${types}" path="/bigtags" z="user-managed"/>
     </form:update>
 </div>
