--- a/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
+<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:fn="http://java.sun.com/jsp/jstl/functions"  xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"  xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" xmlns:table="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
+    <c:set value="${not empty spaceOwner and (fn:toLowerCase(pageContext['request'].userPrincipal.name) eq fn:toLowerCase(twitter['publisher']))}" var="isloggedInUser" />
+          
+    <c:set value="MM/dd/yyyy" var="dateTimePattern" />
+    <fmt:formatDate var="TimeStr" value="${twitter['twitDate']}" pattern="${fn:escapeXml(dateTimePattern)}" />
+    <page:BigTwitterShow id="ps_com_aeiou_bigbang_domain_Twitter" object="${twitter}" delete="${isloggedInUser}" update="${isloggedInUser}" label="${twitter['twtitle']} (${TimeStr})" path="/twitters" z="uLnVWzeo9CFWqAOLKukuqndR2CE=">
+        <field:BigHTMLdisplay field="twitent" object="${twitter}" z="user-managed"/>
+    </page:BigTwitterShow>
+    <br/>
     
-    <page:contentPane id="twitterLeft" items="${twitter}" label="${twitter['twtitle']}/${twitter['twittertag']}" bottom="8">
-	    <page:show id="ps_com_aeiou_bigbang_domain_Twitter" object="${twitter}" path="/twitters" z="uLnVWzeo9CFWqAOLKukuqndR2CE=">
-	        <field:Bigdisplay field="twitent" id="s_com_aeiou_bigbang_domain_Twitter_twitent" object="${twitter}" z="user-managed"/>
-	        <field:display date="true" dateTimePattern="${twitter_twitdate_date_format}" field="twitDate" id="s_com_aeiou_bigbang_domain_Twitter_twitDate" object="${twitter}" z="PVdzwL9/B7RnKMMtGecJl0/H6zg="/>
-	    </page:show>
-	</page:contentPane>
-</div>
+    <c:if test="${not empty remarks}">
+	    <page:list id="pl_com_aeiou_bigbang_domain_Remark" items="${remarks}" z="KLqpUVNJsKiu4VOjx76+vDx7988=">
+	        <table:BigRemarkTable data="${remarks}" id="l_com_aeiou_bigbang_domain_Remark" path="/remarks" z="adZ9QX5p0p5Qz2fIt8EVxJHpMH0=">
+	            <table:column id="c_com_aeiou_bigbang_domain_Remark_content" property="content" z="WsTKbTSNdVI9Ur/PID9to9j5Q+Q="/>
+	            <table:column id="c_com_aeiou_bigbang_domain_Remark_publisher" property="publisher" z="/MCkBnq2SAbaEYDclJ/Zh3aPyIs="/>
+	            <table:column date="true" id="c_com_aeiou_bigbang_domain_Remark_remarkTime" property="remarkTime" z="JcnWePBsDBs4KzGQzxe1ZsM+1PU="/>
+	        </table:BigRemarkTable>
+	    </page:list>
+	    <br/>
+    </c:if>
+    
+    <form:Bigcreate passenger="${twitter}" id="fc_com_aeiou_bigbang_domain_Remark" modelAttribute="newremark" path="/remarks" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
+        <field:editor field="content" id="c_com_aeiou_bigbang_domain_Remark_content" required="true" z="user-managed"/>
+        <field:select field="authority" id="c_com_aeiou_bigbang_domain_Remark_authority" itemValue="id" items="${authorities}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
+        <field:select field="remarkto" id="c_com_aeiou_bigbang_domain_Remark_remarkto" itemValue="id" items="${remarktos}" path="/twitters" z="1fwYviEwBT209mmo9KsB8ptx/5M="/>
+    </form:Bigcreate>
+</div> 
