--- a/src/main/webapp/WEB-INF/views/remarks/create.jspx
+++ b/src/main/webapp/WEB-INF/views/remarks/create.jspx
@@ -3,11 +3,9 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_com_aeiou_bigbang_domain_Remark" modelAttribute="remark" path="/remarks" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
-        <field:input field="content" id="c_com_aeiou_bigbang_domain_Remark_content" required="true" z="T3F6giLLpXJrNETuQerWplAqyFY="/>
-        <field:select field="publisher" id="c_com_aeiou_bigbang_domain_Remark_publisher" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="0V2r7TDOZFQG5T9KX40gLZmk/t4="/>
-        <field:datetime dateTimePattern="${remark_remarktime_date_format}" field="remarkTime" id="c_com_aeiou_bigbang_domain_Remark_remarkTime" z="+vIge32Vmvb6Cx3svdC8uGLrjPY="/>
+        <field:editor field="content" id="c_com_aeiou_bigbang_domain_Remark_content" required="true" z="user-managed"/>
         <field:input field="authority" id="c_com_aeiou_bigbang_domain_Remark_authority" validationMessageCode="field_invalid_integer" z="B4LbmxFRJYLBE3k63GWtCGocJ9E="/>
-        <field:select field="remarkto" id="c_com_aeiou_bigbang_domain_Remark_remarkto" itemValue="id" items="${remarks}" path="/remarks" z="2QgMurw4Yg8v7qwjY4aa7+c61sQ="/>
+        <field:select field="remarkto" id="c_com_aeiou_bigbang_domain_Remark_remarkto" itemValue="id" items="${twitters}" path="/twitters" z="1fwYviEwBT209mmo9KsB8ptx/5M="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_Remark" render="${not empty dependencies}" z="onX3xhhk9w0yYVSbLCd+qHFDBI0="/>
 </div>
