--- a/src/main/webapp/WEB-INF/views/remarks/show.jspx
+++ b/src/main/webapp/WEB-INF/views/remarks/show.jspx
@@ -3,7 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:show id="ps_com_aeiou_bigbang_domain_Remark" object="${remark}" path="/remarks" z="Sh9c1iZNpsmXM1/Z3kVu9y0xoJc=">
-        <field:display field="content" id="s_com_aeiou_bigbang_domain_Remark_content" object="${remark}" z="QJIdoG8cGYR0n86nfffMPaw0YtA="/>
+        <field:Bigdisplay field="content" id="s_com_aeiou_bigbang_domain_Remark_content" object="${remark}" z="QJIdoG8cGYR0n86nfffMPaw0YtA="/>
         <field:display field="authority" id="s_com_aeiou_bigbang_domain_Remark_authority" object="${remark}" z="z6Zsx0qO9ceKJ8ecHfZ6AaA2PGE="/>
     </page:show>
 </div>
