--- a/src/main/webapp/WEB-INF/views/useraccounts/show.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/show.jspx
@@ -7,10 +7,10 @@
         <field:display field="email" id="s_com_aeiou_bigbang_domain_UserAccount_email" object="${useraccount}" z="Wphd9e9VW7ZCR3I3GnXrHNjuxfY="/>
         <field:display field="password" id="s_com_aeiou_bigbang_domain_UserAccount_password" object="${useraccount}" z="jITHy8I1B6Lt6Fd7ojGJuh8j+Vg="/>
         <field:display field="description" id="s_com_aeiou_bigbang_domain_UserAccount_description" object="${useraccount}" z="qZ+xtOETo7VCKIMcUAViaqOIdic="/>
+        <!-- <field:display field="price" id="s_com_aeiou_bigbang_domain_UserAccount_price" object="${useraccount}" z="V9iLJpoHt4wG14hkxUksOkB+2/8="/>
         <field:display field="listento" id="s_com_aeiou_bigbang_domain_UserAccount_listento" object="${useraccount}" z="JtzFe8TvnepQ8GMjO9D4Y/o29uw="/>
-        <field:display field="price" id="s_com_aeiou_bigbang_domain_UserAccount_price" object="${useraccount}" z="V9iLJpoHt4wG14hkxUksOkB+2/8="/>
         <field:display field="layout" id="s_com_aeiou_bigbang_domain_UserAccount_layout" object="${useraccount}" z="NS81Ys0LF+/4bke4iyyfgc/JtA8="/>
         <field:display field="balance" id="s_com_aeiou_bigbang_domain_UserAccount_balance" object="${useraccount}" z="F4Qfd0bIjC8dyXhV+XEtJcBIgDs="/>
-        <field:display field="theme" id="s_com_aeiou_bigbang_domain_UserAccount_theme" object="${useraccount}" z="Jn9qHI1X5Qh1bKfMY/7yfCkAmzU="/>
+        <field:display field="theme" id="s_com_aeiou_bigbang_domain_UserAccount_theme" object="${useraccount}" z="Jn9qHI1X5Qh1bKfMY/7yfCkAmzU="/> -->
     </page:show>
 </div>
