--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -21,20 +21,7 @@
   </c:choose>
   <div style="background: #efefef; padding: 5px; margin-bottom: 3px">
     <div style="text-align: center; padding-bottom: 5px"><b>${title}</b></div>
-  	<spring:message code="pleaseAddSomeContentHere" htmlEscape="false"/>
     <span>
-      <spring:url value="/contents" var="create_url">
-        <spring:param name="form" />
-      </spring:url>
-      <a href="${create_url}">
-        <spring:message code="contributeContent" htmlEscape="false"/>
-        <spring:url value="/resources/images/addcontent.png" var="create_img_url" />
-        <spring:message arguments="${typeName}" code="global_menu_new" var="add_message" htmlEscape="false" />
-        <img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
-      </a>
-    </span>
-    <span class="new">
-  	  <spring:message code="pleaseAddSomeTwitterHere" htmlEscape="false"/>
       <spring:url value="/twitters" var="write_url">
         <spring:param name="form" />
       </spring:url>
@@ -43,6 +30,17 @@
         <spring:url value="/resources/images/addnote.png" var="write_img_url" />
         <spring:message arguments="${typeName}" code="global_menu_newnote" var="add_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
+      </a>
+    </span>
+    <span class="new">
+      <spring:url value="/contents" var="create_url">
+        <spring:param name="form" />
+      </spring:url>
+      <a href="${create_url}">
+        <spring:message code="contributeContent" htmlEscape="false"/>
+        <spring:url value="/resources/images/addcontent.png" var="create_img_url" />
+        <spring:message arguments="${typeName}" code="global_menu_newbookmark" var="add_message" htmlEscape="false" />
+        <img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
       </a>
     </span>
     <c:if test="${empty maxPages and fn:toLowerCase(pageContext['request'].userPrincipal.name) eq fn:toLowerCase(spaceOwner)}">
