--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -21,7 +21,7 @@
   </c:choose>
   <div style="background: #efefef; padding: 5px; margin-bottom: 3px">
     <div style="text-align: center; padding-bottom: 5px"><b>${title}</b></div>
-    <span>
+    <span> <!-- class="new" this style make a right align, while make the line height too low.-->
       <spring:url value="/twitters" var="write_url">
         <spring:param name="form" />
       </spring:url>
@@ -31,8 +31,7 @@
         <spring:message arguments="${typeName}" code="global_menu_newnote" var="add_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(add_message)}" src="${write_img_url}" title="${fn:escapeXml(add_message)}" />
       </a>
-    </span>
-    <span class="new">
+	  <c:out value=" || "/>
       <spring:url value="/contents" var="create_url">
         <spring:param name="form" />
       </spring:url>
