made all the time display not only date, but also time.

--- a/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
@@ -4,7 +4,7 @@
     <jsp:output omit-xml-declaration="yes"/>
     <c:set value="${not empty spaceOwner and (fn:toLowerCase(pageContext['request'].userPrincipal.name) eq fn:toLowerCase(twitter['publisher']))}" var="isloggedInUser" />
           
-    <c:set value="MM/dd/yyyy" var="dateTimePattern" />
+    <c:set value="HH:mm dd/MM/yyyy" var="dateTimePattern" />
     <fmt:formatDate var="TimeStr" value="${twitter['twitDate']}" pattern="${fn:escapeXml(dateTimePattern)}" />
     <page:BigTwitterShow id="ps_com_aeiou_bigbang_domain_Twitter" object="${twitter}" delete="${isloggedInUser}" update="${isloggedInUser}" label="${twitter['twtitle']}" path="/twitters" z="uLnVWzeo9CFWqAOLKukuqndR2CE=">
         <field:BigHTMLdisplay field="twitent" time="${TimeStr}" object="${twitter}" z="user-managed"/>
