--- a/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/create.jspx
@@ -6,14 +6,14 @@
     <table class="tWireless">
         <tr>
             <td class="tWireless nopaddingleft" valign="top" width="350px">
-                <form:Bigcreate id="fc_com_aeiou_bigbang_domain_UserAccount" info_error="${create_error}" modelAttribute="userAccount" path="/useraccounts" render="${empty dependencies}" z="user-managed">
+                <form:BigCreate id="fc_com_aeiou_bigbang_domain_UserAccount" info_error="${create_error}" modelAttribute="userAccount" path="/useraccounts" render="${empty dependencies}" z="user-managed">
                     <field:input field="name" id="c_com_aeiou_bigbang_domain_UserAccount_name" min="2" required="true" z="ivL1uj01/Ogki4rPE5I3PdFQud0="/>
                     <field:input field="password" id="c_com_aeiou_bigbang_domain_UserAccount_password" min="4" required="true" type="password" z="user-managed"/>
                     <field:input field="email" id="c_com_aeiou_bigbang_domain_UserAccount_email" validationMessageCode="field_invalid_email" z="ceq1TElqZB2WL71Mrwy7m1UNg0o="/>
                     <field:input field="description" id="c_com_aeiou_bigbang_domain_UserAccount_description" z="IHXfmTHIFzCFUY3TARmFZXUT838="/>
                     <field:input field="price" id="c_com_aeiou_bigbang_domain_UserAccount_price" max="9" min="0" required="true" z="NNXWMQKTCd/lmw4Q/AvzmkSI5cs="/>
                     <field:input disabled="true" field="balance" id="c_com_aeiou_bigbang_domain_UserAccount_balance" required="true" z="user-managed"/>
-                </form:Bigcreate>
+                </form:BigCreate>
                 <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_UserAccount" render="${not empty dependencies}" z="pRXKbS1jO/JZHS6yO3aerzXp/Tc="/>
             </td>
             <td class="tWireless nopaddingleft" valign="top">
