--- a/src/main/webapp/WEB-INF/views/messages/create.jspx
+++ b/src/main/webapp/WEB-INF/views/messages/create.jspx
@@ -2,12 +2,7 @@
 <div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:create id="fc_com_aeiou_bigbang_domain_Message" modelAttribute="message" path="/messages" render="${empty dependencies}" z="VZrW3zFHttJfru0hI+4Vg2zN6H8=">
-        <field:select field="receiver" id="c_com_aeiou_bigbang_domain_Message_receiver" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="KBafJ1iZJI5Y6D/zzIQM+RZZrgs="/>
-        <field:select field="sender" id="c_com_aeiou_bigbang_domain_Message_sender" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="p4rcyXFwHtw98Mh45cU6+rQdq5w="/>
-        <field:input field="content" id="c_com_aeiou_bigbang_domain_Message_content" required="true" z="m83F1rQSWusDyAsdJZ7ArVMSvXQ="/>
-        <field:datetime dateTimePattern="${message_posttime_date_format}" field="postTime" id="c_com_aeiou_bigbang_domain_Message_postTime" required="true" z="NlPIYmorgayuCMumxI0UVZ7rfiA="/>
-        <field:input field="status" id="c_com_aeiou_bigbang_domain_Message_status" z="WxG7PdU2jtDB7TgnuSM5IlddQmA="/>
-    </form:create>
-    <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_Message" render="${not empty dependencies}" z="+uifig1qFIkpzzQqAarWYyKTCyg="/>
+    <form:BigMessageCreate id="fc_com_aeiou_bigbang_domain_Message" modelAttribute="message" path="/messages" receiverName="${receiverName}" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
+        <field:editor field="content" id="c_com_aeiou_bigbang_domain_Remark_content" required="true" z="user-managed"/>
+    </form:BigMessageCreate>
 </div>
