--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -92,10 +92,8 @@
       </a>
       
       <c:out value=" | " />
-      <spring:url value="/useraccounts/${spaceOwnerId}" var="useraccounts_url">
-		<spring:param name="form"/>
-      </spring:url>
-      <a href="${useraccounts_url}">
+      <spring:url value="/messages" var="messages_url"/>
+      <a href="${messages_url}">
         <spring:url value="/resources/images/inbox.png" var="inbox_img_url" />
         <spring:message code="global_menu_inboxManage" var="inboxManage_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(inboxManage_message)}" src="${inbox_img_url}" title="${fn:escapeXml(inboxManage_message)}" />
