--- a/src/main/webapp/WEB-INF/views/messages/list.jspx
+++ b/src/main/webapp/WEB-INF/views/messages/list.jspx
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" xmlns:table="urn:jsptagdir:/WEB-INF/tags/form/fields" version="2.0">
+<div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:fmt="http://java.sun.com/jsp/jstl/fmt" xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" xmlns:table="urn:jsptagdir:/WEB-INF/tags/form/fields" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <page:list id="pl_com_aeiou_bigbang_domain_Message" items="${messages}" z="ZT4s09LlhPnfRy7ke+gkKC3xIKs=">
-        <table:table data="${messages}" id="l_com_aeiou_bigbang_domain_Message" path="/messages" z="MGFYSAptwWdIx9g+14/sLLL8qoo=">
-            <table:column id="c_com_aeiou_bigbang_domain_Message_receiver" property="receiver" z="HsHqu34GhKOVBD5cBQgFc4cFmQo="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Message_sender" property="sender" z="KR3q84rEB/X38+WVuvS3sgEU0i4="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Message_content" property="content" z="fNxbthqKZxm+8PpkFzt89b6DGkY="/>
-            <table:column date="true" dateTimePattern="${message_posttime_date_format}" id="c_com_aeiou_bigbang_domain_Message_postTime" property="postTime" z="LjcY+FKNq8L1oV1iTKAdjg6mZdY="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Message_status" property="status" z="ZY2UQgoErzK3itzx4FtTkg3qcNI="/>
-        </table:table>
-    </page:list>
+    <c:if test="${not empty messages}">
+        <page:list id="pl_com_aeiou_bigbang_domain_Message" items="${messages}" z="user-managed">
+            <table:BigMessageTable data="${messages}" id="l_com_aeiou_bigbang_domain_Remark" path="/messages" z="adZ9QX5p0p5Qz2fIt8EVxJHpMH0=">
+                <table:column id="c_com_aeiou_bigbang_domain_Remark_publisher" property="publisher" z="/MCkBnq2SAbaEYDclJ/Zh3aPyIs="/>
+                <table:column date="true" id="c_com_aeiou_bigbang_domain_Remark_remarkTime" property="postTime" z="JcnWePBsDBs4KzGQzxe1ZsM+1PU="/>
+            </table:BigMessageTable>
+        </page:list>
+        <br/>
+    </c:if>
 </div>
