--- a/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
@@ -22,7 +22,7 @@
 	    <br/>
     </c:if>
     
-    <form:BigRemarkCreate twitterId="${twitter.id}" id="fc_com_aeiou_bigbang_domain_Remark" modelAttribute="newremark" path="/remarks" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
+    <form:BigRemarkCreate twitterId="${twitter.id}" id="fc_com_aeiou_bigbang_domain_Remark" modelAttribute="newremark" path="/public" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
         <field:editor field="content" id="c_com_aeiou_bigbang_domain_Remark_content" required="true" z="user-managed"/>
         <field:select field="authority" id="c_com_aeiou_bigbang_domain_Remark_authority" itemValue="id" items="${authorities}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
     </form:BigRemarkCreate>
