--- a/src/main/webapp/WEB-INF/views/public/list_more_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_more_twitter.jspx
@@ -47,6 +47,53 @@
         <img alt="${fn:escapeXml(add_message)}" src="${create_img_url}" title="${fn:escapeXml(add_message)}" />
       </a>
     </span>
+    <span class="new">
+    	Drag the quick tool to bookmarks toolbar:
+			<a href='javascript:(
+	  function(e,t){
+	    var%20n=e.document;
+	    setTimeout(
+	      function(){
+	        function%20a(e){
+	          if(e.data==="destroy_bookmarklet"){
+	            var%20r=n.getElementById(t);
+	            if(r){
+	              n.body.removeChild(r);
+	              r=null
+	            }
+	          }
+	        }
+	        var%20t="DELI_bookmarklet_iframe",r=n.getElementById(t);
+	        if(r){
+	          return
+	        }
+	        var%20i="http://localhost/bigbang/contents?form",s=n.createElement("iframe");
+	        s.id=t;
+	        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
+	        +"&amp;title="+encodeURIComponent(n.title)
+	        +"&amp;note="+encodeURIComponent(""+(e.getSelection?e.getSelection():n.getSelection?n.getSelection():n.selection.createRange().text))
+	        +"&amp;v=1.1";
+	        s.style.position="fixed";
+	        s.style.top="0";
+	        s.style.left="0";
+	        s.style.height="100%25";
+	        s.style.width="100%25";
+	        s.style.zIndex="16777270";
+	        s.style.border="none";
+	        s.style.visibility="hidden";
+	        s.onload=function(){
+	          this.style.visibility="visible"
+	        };
+	        n.body.appendChild(s);
+	        var%20o=e.addEventListener?"addEventListener":"attachEvent";
+	        var%20u=o=="attachEvent"?"onmessage":"message";
+	        e[o](u,a,false)
+	      },1
+	    )
+	  }
+	)(window)'>ShareTheGoodOnes!</a>
+    </span>
+      
   </util:panel>
   <br/>
   <page:contentPane id="pl_com_aeiou_bigbang_domain_Content" items="${contents}" label="${tag}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
